--- a/theme.css
+++ b/theme.css
@@ -10,11 +10,12 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    background-color: var(--card-background-color);
 }
 .card-title {
     text-align: center;
     font-size: 2em;
-    color: #4F3674;
+    color: var(--card-title-color);
     font-weight: 400;
 }
 .card-content {
@@ -40,23 +41,23 @@
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid var(--input-border-color);
     border-radius: 4px;
     box-sizing: border-box;
 }
 .btn-primary {
-    background-color: #4F3674;
-    color: white;
+    background-color: var(--btn-background-color);
+    color: var(--btn-color);
 }
 .btn-primary:hover {
-    background-color: #D6A800;
-    color: #4F3674;
+    background-color: var(--btn-hover-background-color);
+    color: var(--btn-hover-color);
 }
 .drop-down-menu {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid var(--input-border-color);
     border-radius: 4px;
     box-sizing: border-box;
 }
@@ -112,23 +113,26 @@ body {
     background: var(--background-color);
 }
 
-
-
-
-#icon-mode:hover {
-    cursor: pointer;
+a {
+    color: var(--anchor-color);
+    text-decoration: none;
 }
 
-#container {
-    margin-top: 50px;
-    margin-left: 100px;
-    margin-right: 100px;
+a:hover {
+    background-color: var(--anchor-hover-background-color);
+    color: var(--anchor-hover-color);
 }
 
-#icon-text {
-    padding-left: 10px;
+h1 {
+    color: var(--heading-color);
+    background-color: var(--h1-background-color);
+    padding: 10px;
+    border: 1px solid var(--h1-border-color);
 }
 
-.pull-right {
-    float: right;
+h2,h3,h4 {
+    color: var(--heading-color);
+    background-color: var(--heading-background-color);
+    padding: 10px;
+    border: 1px solid var(--heading-border-color);
 }
